--- a/clinica_online/package.json
+++ b/clinica_online/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "ng-recaptcha": "^11.0.0",
     "ngx-toastr": "^16.2.0",
     "primeicons": "^6.0.1",
     "rxjs": "~7.8.0",
