--- a/clinica_online/package.json
+++ b/clinica_online/package.json
@@ -30,6 +30,7 @@
     "ngx-toastr": "^16.2.0",
     "primeicons": "^6.0.1",
     "rxjs": "~7.8.0",
+    "svg2pdf.js": "^2.2.1",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
