--- a/clinica_online/package.json
+++ b/clinica_online/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "chartist": "^1.3.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "ng-recaptcha": "^11.0.0",
     "ngx-material-timepicker": "^13.1.0",
@@ -33,6 +34,7 @@
     "svg2pdf.js": "^2.2.1",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@angular/cli": "~15.1.4",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
